versioned_docs/version-8.x/manage-dataset/add-edit-description.md
---
sidebar_position: 7
title: Add edit description
image: https://kalai.fairdataihub.org/api/generate?app=soda-for-sparc&title=Add%2Fedit%20description&description=Manage%20Dataset
---

## Background

All SPARC datasets must have the following metadata on Pennsieve: subtitle, description, banner image, license, and tags. This interface allows you to easily add a description to your Pennsieve dataset. This description will be highly visible on the [SPARC data portal](https://sparc.science/) once your dataset is published.

## How to

To access this interface click on the `Free Form Mode` side bar option, then click on the `Manage Datasets` tab, and finally click on the `Add/edit description` card.

1. Select/confirm your Pennsieve account and dataset. If you have not connected your Pennsieve account with SODA yet, [use the instructions available here](./connect-your-pennsieve-account-with-soda).
2. Fill in or edit your descriptive text in the Study Purpose, Data Collection, and Primary Conclusion sections (a single paragraph is expected for each). You can see published datasets on [sparc.science](https://sparc.science/) for inspiration.
3. Click on `Add description`.

:::info
If an existing description if found for your Pennsieve dataset, it will be shown in the interface and you will be presented with an `Edit description` button to click.
:::

:::note

- SODA only allows you to edit the three required description sections: Study Purpose, Data Collection, and Primary Conclusion. If you have any nonstandard sections they will not be imported into SODA for editing.
- If text is found in your description that does not belong to any required or user defined section it will be considered invalid and placed in the Study Purpose textbox for you to reorganize.
- SODA will warn you if one of your required sections is longer than a single paragraph.
- SODA will warn you if you are missing a required section before finalizing your description.
- SODA will never stop you from creating a description that does not conform to SPARC guidelines.

:::

import PageFeedback from '@site/src/components/PageFeedback';

<PageFeedback />
